--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "2da-entrega-proyecto-final",
+  "name": "proyecto-final-dw24840",
   "version": "1.0.0",
   "description": "Proyecto final DW24840",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build-css": "node-sass --include-path scss scss/prueba.scss css/prueba.css",
+    "build-css": "node-sass --include-path scss scss/style.scss css/stylescss.css",
     "watch-css": "nodemon -e scss -x \"npm run build-css\""
   },
   "repository": {
