--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build-css": "node-sass --include-path scss scss/main.scss css/stylescss.css",
+    "build-css": "sass --watch scss/main.scss css/stylescss.css",
     "watch-css": "nodemon -e scss -x \"npm run build-css\""
+
   },
   "repository": {
     "type": "git",
@@ -21,8 +22,5 @@
   "devDependencies": {
     "node-sass": "^7.0.1",
     "nodemon": "^2.0.15"
-  },
-  "dependencies": {
-    "bootstrap": "^5.1.3"
   }
 }
